Fix for readable line length on mobile

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -85,7 +85,7 @@ body {
   --table-drag-handle-color-active: var(--text-accent);
   --table-add-button-border-width: 0px;
   /* Readable line length off */
-  --file-margins: var(--size-4-2) var(--size-4-12);
+  --file-margins-y: var(--size-4-2);
 }
 
 .mod-macos {
