--- a/src/scss/variables/root.scss
+++ b/src/scss/variables/root.scss
@@ -107,7 +107,7 @@ body {
 	--table-add-button-border-width: 0px;
 
 	/* Readable line length off */
-	--file-margins: var(--size-4-2) var(--size-4-12);
+	--file-margins-y: var(--size-4-2);
 }
 
 .mod-macos {
